[package]
authors = ["ZingerLittleBee"]
edition = "2021"
name = "ostat"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "chrono_date"] }
napi-derive = "2"
systemstat = "0.1.11"
strum = "0.24"
strum_macros = "0.24"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
